Updated to Neo4j 3.5.17. Core tests running.